--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,9 @@ bind r source-file ~/.tmux.conf
 
 set-window-option -g mode-keys vi
 
+bind e resize-pane -D 10
+bind u resize-pane -U 10
+
 # Status bar customization
 set -g status-utf8 on
 set -g status-bg colour200
