--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,10 @@
 # Set a Ctrl-b shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
 
-#set -g default-terminal "screen-256color"
-#
-## Rename your terminals
-#set -g set-titles on
-#set -g set-titles-string '#(whoami)::#h::#(curl ipecho.net/plain;echo)'
-
+# Use Vim style keys
 set-window-option -g mode-keys vi
 
+# Set some resize functions (defaults don't work in OSX)
 bind e resize-pane -D 10
 bind u resize-pane -U 10
 
@@ -22,22 +18,9 @@ set -g status-right-length 60
 set -g status-left "#[bg=#3bf25d]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: ##[fg=Black]#(curl ipecho.net/plain;echo)"
 set -g status-justify left
 set -g status-right '#[fg=#ccffcc]#S #[fg=black]%a %d %b %R'
-
-
 setw -g window-status-current-fg colour232
 setw -g window-status-current-bg colour119
-# ~/.tmux.conf
-#  set -g default-terminal "screen-256color"
-#  set -g status-bg colour235
-#  set -g status-fg white
-#
-#  set-window-option -g window-status-current-fg black
-#  set-window-option -g window-status-current-bg yellow
-#  set -g pane-border-fg colour235
-#  set -g pane-border-bg black
-#  set -g pane-active-border-fg green
-#  set -g pane-active-border-bg black
 
-# clock
+# Clock
 set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
