--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,12 +1,19 @@
 # Set a Ctrl-b shortcut for reloading your tmux config
 bind r source-file ~/.tmux.conf
 
+# Turn off pane swap
+unbind-key C-o
+
 # Use Vim style keys
 set-window-option -g mode-keys vi
 
 # Set some resize functions (defaults don't work in OSX)
 bind e resize-pane -D 10
 bind u resize-pane -U 10
+
+# Active pane
+set-option -g pane-active-border-fg colour200
+set-option -g pane-border-fg black
 
 # Status bar customization
 set -g status-utf8 on
@@ -24,3 +31,4 @@ setw -g window-status-current-bg colour119
 # Clock
 set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
+
