Add copy / paste to tmux conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -32,3 +32,6 @@ setw -g window-status-current-bg colour119
 set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
 
+# # C&P
+# bind -t vi-copy 'v' begin-selection
+# bind -t vi-copy 'y' copy-pipe "reattach-to-user-namespace pbcopy"
