--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,25 +10,28 @@ set-window-option -g mode-keys vi
 # Set some resize functions (defaults don't work in OSX)
 bind e resize-pane -D 10
 bind u resize-pane -U 10
+bind l resize-pane -L 10
+bind r resize-pane -R 10
 
 # Active pane
-set-option -g pane-active-border-fg colour200
+set-option -g pane-active-border-fg colour119
 set-option -g pane-border-fg black
 
 # Status bar customization
 set -g status-utf8 on
-set -g status-bg colour200
+set -g status-bg white
 set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[bg=#3bf25d]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: ##[fg=Black]#(curl ipecho.net/plain;echo)"
+set -g status-left "#[bg=#ffff00]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: ##[fg=Black]#(curl ipecho.net/plain;echo)"
 set -g status-justify left
-set -g status-right '#[fg=#ccffcc]#S #[fg=black]%a %d %b %R'
-setw -g window-status-current-fg colour232
-setw -g window-status-current-bg colour119
+set -g status-right '#[fg=#ffff00]#S #[fg=black]%a %d %b %R'
+setw -g window-status-current-fg "#000000"
+setw -g window-status-current-bg "#ffff00"
 
 # Clock
 set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
 
+set-option -g default-shell /bin/bash
