--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,5 @@
 # Set a Ctrl-b shortcut for reloading your tmux config
-bind r source-file ~/.tmux.conf
+bind v source-file ~/.tmux.conf
 
 # Turn off pane swap
 unbind-key C-o
@@ -14,27 +14,31 @@ bind l resize-pane -L 10
 bind r resize-pane -R 10
 
 # Active pane
-set-option -g pane-active-border-fg colour119
-set-option -g pane-border-fg black
+set-option -g pane-active-border-style fg=colour8,bg=default
+set-option -g pane-border-style fg=black,bg=default
+
+# Active window
+# set-option -g window-active-style bg=#1d1f21,fg=default
+# set-option -g window-style bg=colour16,fg=white
 
 # Status bar customization
-set -g status-utf8 on
-set -g status-bg white
+# neon green colour119
+set -g status-bg colour199
 set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[bg=#ffff00]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: ##[fg=Black]#(curl ipecho.net/plain;echo)"
+set -g status-left "#[bg=#ffff00]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: #(curl ipecho.net/plain;echo)"
 set -g status-justify left
 set -g status-right '#[fg=#ffff00]#S #[fg=black]%a %d %b %R'
-setw -g window-status-current-fg "#000000"
-setw -g window-status-current-bg "#ffff00"
+setw -g window-status-current-format ' #I#[fg=colour163]:#[fg=colour255]#W#[fg=colour249]#F '
+setw -g window-status-current-style 'fg=white bg=black'
 
 # Clock
 set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
 
-set-option -g default-shell /bin/bash
+set-option -g default-shell /bin/zsh
 
 # # C&P
 # bind -t vi-copy 'v' begin-selection
