--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,7 +14,7 @@ bind l resize-pane -L 10
 bind r resize-pane -R 10
 
 # Active pane
-set-option -g pane-active-border-style fg=colour8,bg=default
+set-option -g pane-active-border-style fg=colour226,bg=default
 set-option -g pane-border-style fg=black,bg=default
 
 # Active window
@@ -22,16 +22,16 @@ set-option -g pane-border-style fg=black,bg=default
 # set-option -g window-style bg=colour16,fg=white
 
 # Status bar customization
-# neon green colour119
-set -g status-bg colour12
+# neon green colour119 or 47?
+set -g status-bg colour200
 set -g status-fg white
 set -g status-interval 5
 set -g status-left-length 90
 set -g status-right-length 60
-set -g status-left "#[bg=#ffff00]#[fg=Black]#(whoami)#[fg=Black]@#[fg=Black]#(hostname -s)#[fg=Black] :: #(curl ipecho.net/plain;echo)"
+set -g status-left "#[bg=colour47]#[fg=black]#(whoami)#[fg=black]@#[fg=black]#(hostname -s)#[fg=black] :: #(curl ipecho.net/plain;echo)"
 set -g status-justify left
-set -g status-right '#[fg=#ffff00]#S #[fg=black]%a %d %b %R'
-setw -g window-status-current-format ' #I#[fg=colour163]:#[fg=colour255]#W#[fg=colour249]#F '
+set -g status-right '#[bg=colour200]#[fg=#ffff00]#S #[fg=black]%a %d %b %R'
+setw -g window-status-current-format ' #I#[fg=colour166]:#[fg=colour255]#W#[fg=colour249]#F '
 setw -g window-status-current-style 'fg=white bg=black'
 
 # Clock
@@ -39,6 +39,7 @@ set-window-option -g clock-mode-colour cyan
 set-window-option -g clock-mode-style 12
 
 set-option -g default-shell /bin/zsh
+set -ga terminal-overrides ',xterm-256color:Tc'
 
 # # C&P
 # bind -t vi-copy 'v' begin-selection
